fixed spacing on home and comics page

--- a/assets/scss/pages/comics/single.scss
+++ b/assets/scss/pages/comics/single.scss
@@ -79,7 +79,7 @@
     }
 
     .section-heading{ 
-        margin-bottom: 2.5em;
+        margin-bottom: 2.5rem;
         text-transform: uppercase;
     }
 
@@ -88,13 +88,13 @@
 
     .more-details-section{
         background-color: var(--dark-gray);
-        padding: calc(1.4rem + 3vw) 0 1.5rem;
+        padding: calc(3rem + 1vw) 0 1.5rem;
         color: var(--bs-light)
     }
 
 
     .more-details-inner-column{
-        margin-bottom: 3.5rem;
+        margin-bottom: 3rem;
 
         .heading{
             font-size: 1rem;
@@ -119,7 +119,7 @@
 
     // Section: More Comics
     .more-comics-section{
-        padding: calc(1.4rem + 3vw) 0;
+        padding: calc(2.5rem + 2vw) 0;
         background-color: white;
     }
 
